# eplacement-kyc-verifier

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  bootstrap.py  streamlit_app.py
app/ui/: __init__.py  data_access.py  page.py  sections.py
config/: app_config.yaml  column_mapping.yaml  document_schemas.yaml  logging.yaml  rules.yaml
docs/: architecture.md  input-table-template.md  langflow.md
flows/: README.md  evidence_verification_flow.json
manuscripts/eplacement_kyc_v4_1_validation/: MANUSCRIPT.md  README.md  build_editable_figures_pptx.py  build_manuscript.py  claim_guided_document_evidence_verifier_manuscript.docx  editable_figures_1_4.pptx  eplacement_kyc_verifier_v4_1_validation_manuscript.docx  requirements.txt  validation_summary.json
scripts/: README.md  pull_models.ps1  pull_models.sh  reprocess_failed.py  run_backend.ps1  run_backend.sh  run_batch_once.py  run_direct_job.py  run_streamlit.ps1  run_streamlit.sh  setup_env.ps1  setup_env.sh
src/: __init__.py  settings.py
src/api/: __init__.py  main.py  routes_exports.py  routes_health.py  routes_jobs.py  (+2 more)
tests/: helpers.py  test_applicant_claims.py  test_column_mapping.py  test_decision_queue.py  test_doc_classifier.py  test_document_tags.py  test_download_url.py  test_downloader.py  test_end_to_end_smoke.py  test_first_pass_signals.py  test_langflow_first_pass_runner.py  test_langflow_registry.py  test_marriage_rules.py  test_medex_rules.py  test_merge_back.py  test_ocr_router.py  test_review_queue.py  test_scoring_sheet.py
(+70 files in other folders)
